# xous-cramium

./: .gitignore  Cargo.toml  DEVIATIONS.md  README.md  mkimage.py
api/xous-api-ticktimer/: Cargo.toml
api/xous-api-ticktimer/src/: lib.rs
kernel/: Cargo.toml  assemble.ps1
kernel/src/: services.rs
kernel/src/arch/riscv/: exception.rs  mod.rs
kernel/src/debug/: shell.rs
kernel/src/platform/: mod.rs  rand.rs
kernel/src/platform/cramium/: rand.rs  uart.rs
libs/xous-pio/: Cargo.toml
libs/xous-pio/src/: lib.rs
libs/xous-pio/src/pio_tests/: adder.rs  i2c.rs  mod.rs  nec.rs  spi.rs  units.rs
loader/: Cargo.toml  link-fpga.x  link-soc.x  link.x
loader/src/: asm.S  debug.rs  main.rs  platform.rs  secboot.rs
loader/src/platform/: cramium.rs
precursors/: core.svd  soc.svd  stage.sh
services/console/: Cargo.toml
services/console/src/: main.rs
services/mbox1/: Cargo.toml
services/mbox1/src/: main.rs
services/mbox2/: Cargo.toml
services/mbox2/src/: main.rs
services/xous-log/: Cargo.toml
services/xous-log/src/: debug.rs  main.rs
services/xous-names/: Cargo.toml
services/xous-names/src/: main.rs
services/xous-ticktimer/: Cargo.toml
services/xous-ticktimer/src/: main.rs
svd2utra/src/: generate.rs
tools/perflib/: Cargo.toml
tools/src/: elf.rs  lib.rs  xip.rs  xous_arguments.rs
tools/src/xip/: args.rs  bootconfig.rs  minielf.rs  phase1.rs  phase2.rs
utralib/: Cargo.toml  build.rs
utralib/src/: lib.rs
xous-rs/src/: definitions.rs
xtask/src/: builder.rs  main.rs  utils.rs
