[workspace]
default-members = [
  "services/console",
  "services/xous-log",
  "services/xous-ticktimer",
  "services/xous-names",
]
members = [
  "tools",
  "xtask",
  "kernel",
  "loader",
  "locales",
  "services/console",
  "services/xous-log",
  "services/xous-ticktimer",
  "services/xous-names",
]
resolver = "2"

# These packages have custom RUSTFLAGS, so if they
# were included in the workspace they would cause
# packages to be rebuilt every time they were touched.
# Keep them out of the main workspace.
exclude = [
  "locales",  # exclude because it is machine-generated
  "utralib",
  "xtask",
  "api/xous-api-ticktimer",
]

[profile.release]
codegen-units = 1 # 1 better optimizations
debug = false
strip = false
lto = "fat"
incremental = true
# panic = "abort" # Remove panic output, which can reduce file size
opt-level = "z"  # z,s: Optimize for size instead of performance; 1 for easier debugging

[patch.crates-io.utralib]
path = "./utralib"
[patch.crates-io.svd2utra]
path = "./svd2utra"

[patch.crates-io.xous-api-ticktimer]
path = "./api/xous-api-ticktimer"