[package]
name = "loader"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
description = "Initial kernel loader for Xous"

[dependencies]
utralib = { version = "0.1.13", optional = true, default-features = false }

[dependencies.com_rs]
git = "https://github.com/betrusted-io/com_rs"
branch = "main"

[dev-dependencies]
lazy_static = "1.4.0"

[features]
cramium = ["utralib/cramium"]
renode = ["utralib/renode"]
debug-print = []
earlyprintk = []
renode-bypass = []
shortcuts = []
memtest = []
#default = ["debug-print"]
default = ["shortcuts"] # turn this off for real hardware, shortcuts are there to speed up simulations