[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utralib = {path = "../../utralib"}
xous-api-names = "0.9.25"
xous-api-ticktimer = "0.9.23"

[features]
"cramium" = []
default = ["cramium"]