[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utralib = {path = "../../utralib"}
xous-api-names = "0.9.25"
xous-api-ticktimer = "0.9.23"
xous = "0.9.29"
log-server = {package = "xous-api-log", version = "0.1.23"}
log = "0.4.14"

[features]
"cramium" = []
default = ["cramium"]