[package]
authors = ["bunnie <bunnie@kosagi.com>"]
description = "Provide high-resolution, non-rollover system time"
edition = "2018"
name = "xous-ticktimer"
version = "0.1.24"
license = "MIT OR Apache-2.0"
repository = "https://github.com/betrusted-io/xous-core/"
homepage = "https://betrusted.io/xous-book/"

# Dependency versions enforced by Cargo.lock.
[dependencies]
xous-api-ticktimer = "0.9.41"
xous = "0.9.45"
xous-ipc = "0.9.45"
xous-names = {package = "xous-api-names", version = "0.9.43"}
log-server = {package = "xous-api-log", version = "0.1.41"}
log = "0.4.14"
rkyv = {version = "0.4.3", default-features = false, features = ["const_generics"]}
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
xous-semver = "0.1.2"
utralib = {version = "0.1.20", optional = true, default-features = false }

[features]
cramium-soc = ["utralib/cramium-soc"]
cramium-fpga = ["utralib/cramium-fpga"]
precursor = ["utralib/precursor"]
hosted = ["utralib/hosted"]
renode = ["utralib/renode"]
debug-print = []
watchdog = []
timestamp = []
susres = []
# you may want to remove the watchdog feature if you're debugging a crash, as it will force the system to reboot automatically
default = ["timestamp"]
# default = []
# default = ["debug-print"]
